# influenceR

./: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md
R/: graph_metrics.R  graph_metrics.R.in  graph_metrics.R.win  influenceR.R  kpp-neg.R  zzz.R
man/: betweenness.Rd  bridging.Rd  constraint.Rd  csv.to.igraph.Rd  dimacs.to.graph.Rd  eigencentrality.Rd  ens.Rd  ergm.to.igraph.Rd  igraph.to.network.Rd  influenceR.Rd  keyplayer.Rd
src/: Makevars  Makevars.in  Makevars.win  bridging.c  bridging.h  graph_defs.h  graph_metrics.h  keyplayer-utils.c  keyplayer-utils.h  keyplayer.c  keyplayer.h  main-bridging.c  packagename_init.c  prefix_sums.c  prefix_sums.h  process_sparse.c  process_sparse.h  snap_wrapper.c  utils.c  vertex_betweenness_centrality.c  vertex_betweenness_centrality.h
src/snap-0.4/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
src/snap-0.4/include/: Makefile.am  Makefile.in  graph_defs.h  graph_gen.h  graph_kernels.h  graph_metrics.h  graph_partitioning.h  utils.h
src/snap-0.4/lib/: Makefile.am  Makefile.in
src/snap-0.4/src/: Makefile.am  Makefile.in
src/snap-0.4/src/graph_generation/: Makefile.am  Makefile.in  gen_RMAT_graph.c  gen_mesh_graph.c  gen_random_graph.c  graph_gen.c  read_DIMACS_graph.c  read_GML_graph.c  read_GraphML_graph.c  read_METIS_graph.c  read_SNAP_graph.c
src/snap-0.4/src/graph_kernels/: Makefile.am  Makefile.in  biconnected_components.c  breadth_first_search.c  connected_components.c  graph_diameter.c  strongly_connected_components.c  vertex_cover.c
src/snap-0.4/src/graph_metrics/: Makefile.am  Makefile.in  clustering_coeff.c  community_modularity.c  conductance.c  edge_betweenness_centrality.c  vertex_betweenness_centrality.c
src/snap-0.4/src/graph_partitioning/: Makefile.am  Makefile.in  internal-timer.h  modularity_betweenness.c  modularity_greedy_agglomerative.c  modularity_greedy_agglomerative.h  modularity_greedy_agglomerative_common.c  modularity_spectral.c  seed_community_detection.c
src/snap-0.4/src/misc/: Makefile.am  Makefile.in  bheap.c  list.c  vectorUtils.c
src/snap-0.4/src/sprng2.0/: Makefile.am  Makefile.in  Makefile.old  checkid.c  cmrg.c  cmrg.h  cputime.c  cputime.h  int64.h  lcg.c  lcg.h  lcg64.c  lcg64.h  lfg.c  lfg.h  makeseed.c  makeseed.h  memory.c  memory.h  mlfg.c  mlfg.h  primes_32.c  primes_32.h  primes_64.c  primes_64.h  sprng.c  store.c  store.h
src/snap-0.4/test/: Makefile.am  Makefile.in  drive_BFS.c  drive_biconnected_components.c  drive_modularity_edge_betweenness.c  drive_modularity_greedy_agglomerative.c  drive_modularity_spectral.c  drive_random_walk.c  drive_save_graph.c  drive_seed_community_detection.c  drive_vertex_betweenness.c  drive_vertex_cover.c  dyn_test_config_file.txt  test_dyn_ds.c  test_graph_dimacs_5_8.dim  test_graph_rand_100K_1M_undir_unwt.rnd  test_graph_rand_1K_10K_undir_unwt.rnd  test_graph_rmat_100K_1M_undir_unwt.rmat  test_graph_snap_5_8_undir_unwt.gr
src/snap-0.4/test/seed-experiments/: community-list-to-seeds  gen-comms  gen-rw  gen-seedfile-community  seed_set_experiment
tests/: test_bridge.R  test_kp.R  testthat.R
tests/testthat/: flo_results.RData  test_metrics.R
